--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -17,7 +17,8 @@
             android:id="@+id/spinner"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:paddingTop="10dp"
+
 
             />
 
@@ -28,6 +29,7 @@
                 android:layout_height="70dp"
                 android:background="@color/background_color"
                 android:layout_marginBottom="5dp"
+                android:layout_marginTop="10dp"
 
 
                 >
@@ -59,7 +61,9 @@
                     android:padding="10dp"
                     android:textAlignment="center"
                     android:textColor="@color/text_color"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:inputType="numberDecimal"
+                    />
 
             </RelativeLayout>
         <RelativeLayout
@@ -97,7 +101,9 @@
                 android:padding="10dp"
                 android:textAlignment="center"
                 android:textColor="@color/text_color"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:inputType="numberDecimal"
+                />
 
         </RelativeLayout>
 
@@ -137,7 +143,9 @@
                 android:padding="10dp"
                 android:textAlignment="center"
                 android:textColor="@color/text_color"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:inputType="numberDecimal"
+                />
 
         </RelativeLayout>
         <RelativeLayout
@@ -175,7 +183,9 @@
                 android:padding="10dp"
                 android:textAlignment="center"
                 android:textColor="@color/text_color"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:inputType="numberDecimal"
+                />
 
         </RelativeLayout>
 
@@ -215,7 +225,9 @@
                 android:padding="10dp"
                 android:textAlignment="center"
                 android:textColor="@color/text_color"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:inputType="numberDecimal"
+                />
 
         </RelativeLayout>
         <LinearLayout
@@ -237,7 +249,7 @@
                 android:padding="10dp"
                 android:textSize="20sp"
                 android:textAllCaps="false"
-                android:textColor="@color/text_color"
+                android:textColor="#FF0000"
                 android:backgroundTint="@color/background_color"
                 />
 
@@ -252,7 +264,7 @@
                 android:textStyle="bold"
                 android:layout_marginLeft="15dp"
                 android:textAllCaps="false"
-                android:textColor="@color/text_color"
+                android:textColor="#4CAF50"
                 android:backgroundTint="@color/background_color"
                 />
         </LinearLayout>
